src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this record is part of the integration with IE.</inlineHelpText>
        <label>IE Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <externalId>true</externalId>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <description>Status that gets set when attributes on the record are updated and therefore needs to be sent to the IE system.</description>
        <inlineHelpText>Pending =  Record needs to be sent to the IE system.
			Processed = Record was successfully received by IE system.
			Error = Record was not successfully received by IE system.</inlineHelpText>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <inlineHelpText>IE system date for when the record was last updated in the IE database.</inlineHelpText>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCW</fullName>
                </value>
                <value>
                    <fullName>DW</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acklins</fullName>
                </value>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Ahuachapán</fullName>
                </value>
                <value>
                    <fullName>Aisén del General Carlos Ibáñez del Campo</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alajuela</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alta Verapaz</fullName>
                </value>
                <value>
                    <fullName>Alto Paraguay</fullName>
                </value>
                <value>
                    <fullName>Alto Paraná</fullName>
                </value>
                <value>
                    <fullName>Amambay</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Ancash</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Anse la Raye</fullName>
                </value>
                <value>
                    <fullName>Antioquia</fullName>
                </value>
                <value>
                    <fullName>Antofagasta</fullName>
                </value>
                <value>
                    <fullName>Anzoátegui</fullName>
                </value>
                <value>
                    <fullName>Apure</fullName>
                </value>
                <value>
                    <fullName>Apurímac</fullName>
                </value>
                <value>
                    <fullName>Aragua</fullName>
                </value>
                <value>
                    <fullName>Arauca</fullName>
                </value>
                <value>
                    <fullName>Araucanía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>City__c</columns>
        <columns>State_Province__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Partial_Address_Validation</fullName>
        <active>true</active>
        <description>This Validation requires Address_Line_1__c, City__c, Country__c and State__c.</description>
        <errorConditionFormula>$Profile.Id != &quot;00eC0000001GSlm&quot; &amp;&amp;  $Profile.Id != &quot;00eC0000001GSlh&quot;

			&amp;&amp;
			if( ISBLANK( Address_Line_1__c ) &amp;&amp; ISBLANK( City__c ) &amp;&amp; ISBLANK( TEXT(Country__c) ) &amp;&amp;
			(CONTAINS(&quot;United States:Antigua and Barbuda:Argentina:Australia:Barbados:Bolivia&apos;,&apos; Plurinational State of:Bonaire&apos;,&apos; Sint Eustatius and Saba:Brazil:Bahamas:Belize:Canada:Chile:China: Colombia:Costa Rica:Dominica:Dominican Republic:Ecuador:Grenada:Guatemala:Guyana:Honduras:Haiti:Ireland:India:Jamaica:Saint Kitts and Nevis:Saint Lucia:Mexico:Nicaragua :Panama:Peru:Paraguay:Suriname:El Salvador:Trinidad and Tobago:Uruguay:Saint Vincent and the Grenadines:Venezuela&apos;,&apos; Bolivarian Republic of&quot;, TEXT(Country__c) ) &amp;&amp;ISPICKVAL(State_Province__c, &quot;&quot;)) , FALSE,

			if( !ISBLANK( Address_Line_1__c ) &amp;&amp; !ISBLANK( City__c ) &amp;&amp; !ISBLANK( TEXT(Country__c) ) &amp;&amp;
			!(CONTAINS(&quot;United States:Antigua and Barbuda:Argentina:Australia:Barbados:Bolivia&apos;,&apos; Plurinational State of:Bonaire&apos;,&apos; Sint Eustatius and Saba:Brazil:Bahamas:Belize:Canada:Chile:China: Colombia:Costa Rica:Dominica:Dominican Republic:Ecuador:Grenada:Guatemala:Guyana:Honduras:Haiti:Ireland:India:Jamaica:Saint Kitts and Nevis:Saint Lucia:Mexico:Nicaragua :Panama:Peru:Paraguay:Suriname:El Salvador:Trinidad and Tobago:Uruguay:Saint Vincent and the Grenadines:Venezuela&apos;,&apos; Bolivarian Republic of&quot;,  TEXT(Country__c) ) &amp;&amp;ISPICKVAL(State_Province__c, &quot;&quot;)) , FALSE,TRUE))</errorConditionFormula>
        <errorMessage>Please enter Address Line 1, City, Country and State(If listed).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Postal_Code</fullName>
        <active>true</active>
        <description>The Zip/Postal Code is required (under the Address Information).</description>
        <errorConditionFormula>IF ($User.Id == &apos;005C0000003N8XL&apos;, false,
			IF ($User.Id == &apos;005C0000005kwrQ&apos;, false,
			IF ($User.Id == &apos;005C0000005kwr6&apos;, false,
			IF ($User.Id == &apos;0051A00000DGYxJ&apos;, false,
			(ISBLANK(Postal_Code__c))))))</errorConditionFormula>
        <errorDisplayField>Postal_Code__c</errorDisplayField>
        <errorMessage>The Zip/Postal Code is required (under the Address Information).</errorMessage>
    </validationRules>
</CustomObject>